--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
   width:100%;
   height: 1000px;
   margin: -25px auto;
-  font-size: 35px;
+  font-size: 27px;
   text-align: center;
 }
 
@@ -22,12 +22,12 @@ body{
 }
 
 input{
-  height: 40px;
+  height: 30px;
   border-radius: 7px;
   background-color: rgb(255, 198, 195);
 }
 button{
-  margin: 10px 20px;
+  margin: 20px;
   padding:10px;
   background-color: rgb(213, 145, 175);
   border-color: #FFFFFF;
