--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
   background-color:rgb(228, 146, 146);
   color:rgb(255, 198, 195);
   width:100%;
-  height: 100%;
+  height: 1000px;
   margin: -25px auto;
   font-size: 20px;
   text-align: center;
