--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ input{
   height: 30px;
   border-radius: 7px;
   background-color: rgb(255, 198, 195);
-  font-size: 25px;
-  padding: 0 15px;
+  font-size: 20px;
+  padding: 5px 10px;
 }
 button{
   margin: 20px;
